--- a/inst/rmarkdown/templates/lab9/template.yaml
+++ b/inst/rmarkdown/templates/lab9/template.yaml
@@ -1,3 +1,3 @@
-name: Lab 9
+name: Lab9
 description: >
- A document for writing a report about histograms and descriptive statistics
+ A document showing how to do univariate statistics
