--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lehmansociology
 Title: Tools for Sociology Students Using R
-Version: 0.0.0.9009
+Version: 0.0.0.9010
 Authors@R: person("Elin", "Waring", , "elin.waring@gmail.com", role = c("aut", "cre"))
 Description: This package contains useful things for students in sociology classes at Lehman.
 Depends: R (>= 3.1.0)
@@ -10,8 +10,11 @@ Imports:
     dplyr,
     ggvis,
     ggplot2,
+    scales,
+    grid,
     lsr,
-    mosaic
-Suggests: knitr,
-          xtable
+    mosaic,
+    knitr,
+    xtable
+Suggests:
 VignetteBuilder: knitr
