--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lehmansociology
 Title: Tools for Sociology Students Using R
-Version: 0.0.0.9012
+Version: 0.0.0.9013
 Authors@R: person("Elin", "Waring", , "elin.waring@gmail.com", role = c("aut", "cre"))
 Description: This package contains useful things for students in sociology classes at Lehman.
 Depends: R (>= 3.1.0)
@@ -11,9 +11,12 @@ Imports:
     ggvis,
     ggplot2,
     grid,
-    lsr,
     mosaic,
     knitr,
-    xtable
+    xtable,
+    magrittr,
+    maps,
+    methods,
+    googlesheets
 Suggests:
 VignetteBuilder: knitr
