--- a/inst/rmarkdown/templates/Spence-ConfidenceIntervalscont/template.yaml
+++ b/inst/rmarkdown/templates/Spence-ConfidenceIntervalscont/template.yaml
@@ -1,3 +1,3 @@
-name: Spence - Confidence Intervals, cont.
+name: Spence - Confidence Intervals continued
 description: >
  A document showing how to do confidence intervals for means and proportions, continued.
