--- a/inst/rmarkdown/templates/waringhighstakes2/template.yaml
+++ b/inst/rmarkdown/templates/waringhighstakes2/template.yaml
@@ -1,3 +1,3 @@
-name: High Stakes #2 Template
+name: High Stakes Number 2 Waring
 description: >
  A template for the second high stakes assignment.
