--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,24 @@
 Package: lehmansociology
 Title: Tools for Sociology Students Using R
-Version: 0.0.0.9013
+Version: 0.0.0.9014
 Authors@R: person("Elin", "Waring", , "elin.waring@gmail.com", role = c("aut", "cre"))
 Description: This package contains useful things for students in sociology
     classes at Lehman.
 Depends:
     R (>= 3.1.0)
-License: GPLv3
+License: GPL-3
 LazyData: true
 Imports:
     dplyr,
     ggvis,
     ggplot2,
     grid,
-    mosaic,
     knitr,
     xtable,
     magrittr,
     maps,
     methods,
+    printr,
     googlesheets
 Suggests:
 VignetteBuilder: knitr
