--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lehmansociology
 Title: Tools for Sociology Students Using R
-Version: 0.0.0.9014
+Version: 0.0.0.9015
 Authors@R: person("Elin", "Waring", , "elin.waring@gmail.com", role = c("aut", "cre"))
 Description: This package contains useful things for students in sociology
     classes at Lehman.
@@ -18,7 +18,8 @@ Imports:
     magrittr,
     maps,
     methods,
-    googlesheets
+    googlesheets,
+    HMDHFDplus
 Suggests:
     printr
 Remotes:
