Some detail clean ups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(MODE)
 export(create_educ_poverty_data)
 export(crosstab)
 export(ggvis_percent)
+export(inverselogit)
 export(load_lehman_data)
+export(logit)
 export(meltHMDdata)
 export(populationPyramid)
 export(printCrosstab)
