Add some new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(MODE)
 export(create_educ_poverty_data)
 export(crosstab)
+export(get_swirl_name)
 export(ggvis_percent)
 export(inverselogit)
 export(load_lehman_data)
 export(logit)
 export(meltHMDdata)
+export(my_swirl_completed)
 export(populationPyramid)
 export(printCrosstab)
 export(readMyData)
