Add anscombe templates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(inverselogit)
 export(load_lehman_data)
 export(logit)
 export(meltHMDdata)
-export(my_swirl_completed)
+export(my_swirl_progress)
 export(populationPyramid)
 export(printCrosstab)
 export(readMyData)
