--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lehmansociology
 Title: Tools for Sociology Students Using R
-Version: 0.0.0.906
+Version: 0.0.0.908
 Authors@R: person("Elin", "Waring", , "elin.waring@gmail.com", role = c("aut", "cre"))
 Description: This package contains useful things for students in sociology
     classes at Lehman.
@@ -13,6 +13,7 @@ Imports:
     ggvis,
     ggplot2,
     grid,
+    gtools,
     knitr,
     xtable,
     magrittr,
@@ -27,4 +28,4 @@ Suggests:
 Remotes:
     yihui/printr
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
