--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(logit)
 export(meltHMDdata)
 export(my_swirl_progress)
 export(populationPyramid)
+export(pretty_tab)
 export(readMyData)
 export(replaceCommas)
 export(variation)
