--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(MODE)
 export(create_educ_poverty_data)
 export(crosstab)
 export(frequency)
+export(get_col_label)
+export(get_column_info)
 export(get_swirl_name)
 export(inverselogit)
 export(load_lehman_data)
