Add new functions and a few other updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,29 @@ Remotes:
     timriffe/TR1/TR1/HMDHFDplus
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
+Collate: 
+     'varp.R'
+     'my_swirl_progress.R'
+     'crosstab.R'
+     'pretty_freq.R'
+     'inverselogit.R'
+     'print.crosstab.R'
+     'pretty_tab.R'
+     'frequency.R'
+     'print.frequencytable.R'
+     'summary.crosstab.R'
+     'get_swirl_name.R'
+     'logit.R'
+     'populationPyramid.R'
+     'meltHMDdata.R'
+     'MODE.R'
+     'get_column_info.R'
+     'get_col_label.R'
+     'sdp.R'
+     'create_educ_poverty_data.R'
+     'data.R'
+     'load_lehman_data.R'
+     'makePercentTable.R'
+     'readmydata.R'
+     'replacecommas.R'
+     'variation.R'     
